--- a/dashboard.html
+++ b/dashboard.html
@@ -1719,8 +1719,8 @@
         };
 
         // Hàm mở Modal
+        // Hàm mở Modal (Đã xóa thông báo 'Đang tải...')
         window.openHeroModal = async () => {
-            window.showNotification("Đang tải cấu hình...", "info");
             try {
                 const docSnap = await getDoc(doc(db, "site_settings", "homepage_hero"));
                 if (docSnap.exists()) {
@@ -1734,13 +1734,15 @@
                     document.getElementById('hBtnText').value = d.btnText || "";
                     document.getElementById('hBtnLink').value = d.btnLink || "";
                     
-                    window.currentHeroImg = d.image || ""; // Dùng window.currentHeroImg
+                    window.currentHeroImg = d.image || ""; 
                     
                     document.getElementById('hImageUrl').value = window.currentHeroImg;
                     if(window.currentHeroImg) document.getElementById('heroImgPreview').src = window.currentHeroImg;
                 }
                 window.toggleModal('heroModal', true);
-            } catch(e) { window.showNotification("Lỗi tải: " + e.message, "error"); }
+            } catch(e) { 
+                console.error(e); // Chỉ log lỗi ngầm, không hiện thông báo nếu không cần thiết
+            }
         };
 
         // Hàm lưu cấu hình
