--- a/dashboard.html
+++ b/dashboard.html
@@ -402,7 +402,10 @@
             <div class="p-6 overflow-y-auto grid grid-cols-1 lg:grid-cols-3 gap-6">
                 <div class="lg:col-span-1 space-y-4">
                     <div>
-                        <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Ảnh bìa khóa học</label>
+                        <label class="block text-xs font-bold text-gray-500 uppercase mb-1">
+                            Ảnh bìa khóa học 
+                            <span class="text-red-500 normal-case italic ml-2">(Nên dùng ảnh tỉ lệ 16:9 - Kích thước chuẩn: 800x450px)</span>
+                        </label>
                         <div class="relative group cursor-pointer border-2 border-dashed border-gray-300 rounded-xl overflow-hidden aspect-video bg-gray-50 flex items-center justify-center hover:border-blue-500 transition-all" onclick="document.getElementById('courseThumbInput').click()">
                             <img id="courseThumbPreview" src="" class="absolute inset-0 w-full h-full object-cover hidden">
                             <div class="text-center text-gray-400 group-hover:text-blue-500 z-10">
