--- a/index.html
+++ b/index.html
@@ -250,22 +250,127 @@
         const googleProvider = new GoogleAuthProvider();
 
         // 1. RENDER BANNER (STYLE 1, 2, 3)
+        // --- 1. RENDER BANNER (5 STYLES + LOGO + TAGS MỚI) ---
         function renderHero(d) {
+            // A. Cập nhật Logo (nếu có)
+            if (d.logo) {
+                // Tìm tất cả ảnh logo trên header để thay thế
+                const logoImgs = document.querySelectorAll('header img, .logo-img-class'); 
+                // Nếu trang dùng FontAwesome icon, ta cần thay bằng thẻ img
+                // Ở code hiện tại anh dùng icon <i class="fa-graduation-cap"></i>, ta sẽ tìm div chứa nó
+                const logoContainer = document.querySelector('header .bg-gradient-to-br');
+                if (logoContainer) {
+                    // Thay thế icon bằng ảnh logo
+                    logoContainer.className = "w-10 h-10 flex items-center justify-center";
+                    logoContainer.innerHTML = `<img src="${d.logo}" class="w-full h-full object-contain rounded-lg">`;
+                }
+            }
+
             const container = document.getElementById('heroSectionContainer');
             if (!container) return;
+            
             const style = d.style || 'style1';
+            
+            // Xử lý Tags: Chuyển mảng thành HTML
+            let tagsHtml = '';
+            if (d.tags && Array.isArray(d.tags)) {
+                tagsHtml = d.tags.map(tag => 
+                    `<span class="bg-teal-100 text-teal-800 px-3 py-1 rounded-full text-xs font-bold border border-teal-200 uppercase tracking-wider shadow-sm">${tag}</span>`
+                ).join(' ');
+            } else if (d.tag1) { // Hỗ trợ dữ liệu cũ
+                tagsHtml = `<span class="bg-teal-100 text-teal-800 px-3 py-1 rounded-full text-xs font-bold border border-teal-200">${d.tag1}</span>`;
+            }
+
             let html = '';
 
+            // --- STYLE 1: CỔ ĐIỂN (Chữ nhỏ lại) ---
             if (style === 'style1') {
                 container.className = "flex-1 flex items-center relative overflow-hidden bg-gradient-to-br from-teal-50 via-white to-blue-50 py-12";
-                html = `<div class="max-w-7xl mx-auto px-4 w-full grid grid-cols-1 lg:grid-cols-2 gap-12 items-center relative z-10"><div class="text-center lg:text-left order-2 lg:order-1 space-y-6"><div class="inline-flex gap-2 justify-center lg:justify-start">${d.tag1?`<span class="bg-teal-100 text-teal-700 px-3 py-1 rounded-full text-xs font-bold border border-teal-200">${d.tag1}</span>`:''}${d.tag2?`<span class="bg-orange-100 text-orange-700 px-3 py-1 rounded-full text-xs font-bold border border-orange-200">${d.tag2}</span>`:''}</div><h1 class="text-4xl md:text-6xl font-black text-gray-800 leading-tight">${d.title1} <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-orange-500">${d.title2}</span></h1><p class="text-lg text-gray-600 font-medium max-w-xl mx-auto lg:mx-0">${d.desc}</p><div class="pt-2"><a href="${d.btnLink}" class="inline-block px-8 py-4 bg-accent text-white font-bold rounded-xl shadow-lg hover-bg-accent transition-transform hover:scale-105 uppercase tracking-wide">${d.btnText}</a></div></div><div class="relative order-1 lg:order-2 flex justify-center"><img src="${d.image}" class="w-full max-w-md object-contain drop-shadow-2xl animate-float" style="max-height: 500px;"></div></div>`;
-            } else if (style === 'style2') {
-                container.className = "flex-1 pt-16 bg-white relative overflow-hidden flex flex-col items-center";
-                html = `<div class="max-w-4xl mx-auto px-4 text-center z-10 mb-10"><p class="text-brand font-bold tracking-widest uppercase text-sm mb-3 animate-fade-in">${d.tag1} • ${d.tag2}</p><h1 class="text-5xl md:text-7xl font-black text-gray-900 mb-6 tracking-tight">${d.title1} <span class="text-accent">${d.title2}</span></h1><p class="text-xl text-gray-500 max-w-2xl mx-auto mb-8">${d.desc}</p><a href="${d.btnLink}" class="px-10 py-4 bg-gray-900 text-white font-bold rounded-full hover:bg-gray-800 transition-all shadow-xl text-lg">${d.btnText} <i class="fa-solid fa-arrow-right ml-2"></i></a></div><div class="w-full max-w-6xl px-4 mt-auto"><img src="${d.image}" class="w-full h-auto rounded-t-3xl shadow-[0_-20px_60px_-15px_rgba(0,0,0,0.3)] border-t-8 border-x-8 border-gray-100"></div>`;
-            } else if (style === 'style3') {
-                container.className = "flex-1 bg-gray-900 text-white py-20 relative overflow-hidden flex items-center";
-                html = `<div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')] opacity-10"></div><div class="absolute top-0 right-0 w-1/2 h-full bg-gradient-to-l from-teal-900/40 to-transparent"></div><div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-16 items-center relative z-10"><div><div class="w-20 h-1 bg-accent mb-8"></div><h1 class="text-5xl md:text-6xl font-bold mb-6 leading-none">${d.title1} <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-orange-400 to-yellow-300">${d.title2}</span></h1><p class="text-gray-400 text-lg mb-8 border-l-2 border-gray-700 pl-6 py-2">${d.desc}</p><div class="flex items-center gap-6"><a href="${d.btnLink}" class="px-8 py-3 border-2 border-accent text-accent font-bold hover:bg-accent hover:text-white transition-all uppercase tracking-widest text-sm rounded">${d.btnText}</a></div></div><div class="relative"><div class="absolute -inset-4 bg-accent/20 rounded-full blur-3xl"></div><img src="${d.image}" class="relative w-full max-w-sm mx-auto rounded shadow-2xl shadow-teal-500/10 border border-gray-700 grayscale hover:grayscale-0 transition-all duration-700"></div></div>`;
+                html = `
+                <div class="max-w-7xl mx-auto px-4 w-full grid grid-cols-1 lg:grid-cols-2 gap-10 items-center relative z-10">
+                    <div class="text-center lg:text-left order-2 lg:order-1 space-y-5">
+                        <h1 class="text-3xl md:text-5xl font-black text-gray-800 leading-tight">
+                            ${d.title1} <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-orange-500">${d.title2}</span>
+                        </h1>
+                        <div class="flex flex-wrap gap-2 justify-center lg:justify-start pt-1">${tagsHtml}</div>
+                        <p class="text-base text-gray-600 font-medium max-w-xl mx-auto lg:mx-0 leading-relaxed">${d.desc}</p>
+                        <div class="pt-2">
+                            <a href="${d.btnLink}" class="inline-block px-6 py-3 bg-accent text-white font-bold rounded-xl shadow-lg hover-bg-accent transition-transform hover:scale-105 uppercase tracking-wide text-sm">${d.btnText}</a>
+                        </div>
+                    </div>
+                    <div class="relative order-1 lg:order-2 flex justify-center">
+                        <img src="${d.image}" class="w-full max-w-sm object-contain drop-shadow-2xl animate-float" style="max-height: 400px;">
+                    </div>
+                </div>`;
+            } 
+            // --- STYLE 2: HIỆN ĐẠI (Căn giữa) ---
+            else if (style === 'style2') {
+                container.className = "flex-1 pt-12 bg-white relative overflow-hidden flex flex-col items-center";
+                html = `
+                <div class="max-w-4xl mx-auto px-4 text-center z-10 mb-8">
+                    <h1 class="text-4xl md:text-6xl font-black text-gray-900 mb-4 tracking-tight">${d.title1} <span class="text-accent">${d.title2}</span></h1>
+                    <div class="flex flex-wrap gap-2 justify-center mb-6 animate-fade-in">${tagsHtml}</div>
+                    <p class="text-lg text-gray-500 max-w-2xl mx-auto mb-8">${d.desc}</p>
+                    <a href="${d.btnLink}" class="px-8 py-3 bg-gray-900 text-white font-bold rounded-full hover:bg-gray-800 transition-all shadow-xl text-sm">${d.btnText} <i class="fa-solid fa-arrow-right ml-2"></i></a>
+                </div>
+                <div class="w-full max-w-5xl px-4 mt-auto">
+                    <img src="${d.image}" class="w-full h-auto rounded-t-3xl shadow-2xl border-t-4 border-x-4 border-gray-100">
+                </div>`;
             }
+            // --- STYLE 3: DARK MODE ---
+            else if (style === 'style3') {
+                container.className = "flex-1 bg-gray-900 text-white py-16 relative overflow-hidden flex items-center";
+                html = `
+                <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')] opacity-10"></div>
+                <div class="absolute top-0 right-0 w-1/2 h-full bg-gradient-to-l from-teal-900/40 to-transparent"></div>
+                <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-12 items-center relative z-10">
+                    <div>
+                        <div class="w-16 h-1 bg-accent mb-6"></div>
+                        <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-none">${d.title1} <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-orange-400 to-yellow-300">${d.title2}</span></h1>
+                        <div class="flex flex-wrap gap-2 mb-6">${tagsHtml}</div>
+                        <p class="text-gray-400 text-base mb-8 border-l-2 border-gray-700 pl-4 py-1">${d.desc}</p>
+                        <a href="${d.btnLink}" class="px-8 py-3 border-2 border-accent text-accent font-bold hover:bg-accent hover:text-white transition-all uppercase tracking-widest text-xs rounded">${d.btnText}</a>
+                    </div>
+                    <div class="relative">
+                        <div class="absolute -inset-4 bg-accent/20 rounded-full blur-3xl"></div>
+                        <img src="${d.image}" class="relative w-full max-w-xs mx-auto rounded shadow-2xl shadow-teal-500/10 border border-gray-700 grayscale hover:grayscale-0 transition-all duration-700">
+                    </div>
+                </div>`;
+            }
+            // --- STYLE 4: POSTER (Ảnh nền Full) ---
+            else if (style === 'style4') {
+                container.className = "flex-1 relative min-h-[500px] flex items-center";
+                html = `
+                <div class="absolute inset-0 z-0">
+                    <img src="${d.image}" class="w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-r from-black/80 via-black/50 to-transparent"></div>
+                </div>
+                <div class="max-w-7xl mx-auto px-4 relative z-10 w-full text-white">
+                    <div class="max-w-2xl">
+                        <div class="flex flex-wrap gap-2 mb-4">${tagsHtml}</div>
+                        <h1 class="text-4xl md:text-6xl font-black mb-4 leading-tight">${d.title1} <br> <span class="text-accent">${d.title2}</span></h1>
+                        <p class="text-gray-300 text-lg mb-8 drop-shadow-md">${d.desc}</p>
+                        <a href="${d.btnLink}" class="px-8 py-4 bg-white text-gray-900 font-black rounded hover:bg-gray-100 transition-all shadow-lg uppercase tracking-wide text-sm">${d.btnText}</a>
+                    </div>
+                </div>`;
+            }
+            // --- STYLE 5: PHÁ CÁCH (Chia chéo) ---
+            else if (style === 'style5') {
+                container.className = "flex-1 bg-white relative overflow-hidden flex flex-col md:flex-row";
+                html = `
+                <div class="w-full md:w-1/2 p-10 md:p-20 flex flex-col justify-center bg-gray-50">
+                    <h1 class="text-3xl md:text-5xl font-black text-gray-800 mb-2">${d.title1}</h1>
+                    <h2 class="text-3xl md:text-5xl font-black text-transparent bg-clip-text bg-gradient-to-r from-brand to-teal-400 mb-6">${d.title2}</h2>
+                    <div class="flex flex-wrap gap-2 mb-6">${tagsHtml}</div>
+                    <p class="text-gray-600 mb-8 leading-relaxed">${d.desc}</p>
+                    <div><a href="${d.btnLink}" class="px-8 py-3 bg-brand text-white font-bold rounded-tl-xl rounded-br-xl shadow-lg hover:shadow-brand/50 transition-all text-sm">${d.btnText}</a></div>
+                </div>
+                <div class="w-full md:w-1/2 relative min-h-[300px]">
+                    <div class="absolute inset-0 bg-accent transform -skew-x-6 scale-110 origin-bottom-left z-0"></div>
+                    <img src="${d.image}" class="absolute inset-0 w-full h-full object-cover z-10 mix-blend-multiply opacity-90">
+                </div>`;
+            }
+
             container.innerHTML = html;
         }
 
