--- a/dashboard.html
+++ b/dashboard.html
@@ -453,7 +453,7 @@
             
             <div class="p-6 overflow-y-auto space-y-6">
                 <div class="bg-gray-50 p-4 rounded-xl border border-gray-200">
-                    <label class="block text-xs font-bold text-gray-500 uppercase mb-2">Logo Website (Góc trái trên cùng)</label>
+                    <label class="block text-xs font-bold text-gray-500 uppercase mb-2">Logo Website</label>
                     <div class="flex items-center gap-4">
                         <div class="w-16 h-16 bg-white border border-gray-200 rounded-lg flex items-center justify-center overflow-hidden p-1">
                             <img id="logoPreview" src="https://via.placeholder.com/100" class="w-full h-full object-contain">
@@ -463,7 +463,7 @@
                                 <i class="fa-solid fa-cloud-arrow-up"></i> Tải Logo mới
                             </button>
                             <input type="file" id="logoInput" class="hidden" accept="image/*" onchange="window.handleLogoUpload(this)">
-                            <input type="text" id="hLogoUrl" class="w-full text-[10px] text-gray-400 bg-transparent border-none focus:ring-0 p-0" readonly placeholder="Link logo...">
+                            <p class="text-[10px] text-red-500 italic mt-1">* Kích thước chuẩn: Hình vuông (100x100px) hoặc Hình chữ nhật ngang (200x60px). Nền trong suốt (PNG).</p>
                         </div>
                     </div>
                 </div>
@@ -474,9 +474,13 @@
                         <option value="style1">Style 1: Cổ điển (Ảnh phải - Chữ trái)</option>
                         <option value="style2">Style 2: Hiện đại (Căn giữa - Ảnh lớn)</option>
                         <option value="style3">Style 3: Sang trọng (Nền tối - Dark Mode)</option>
-                        <option value="style4">Style 4: Poster (Ảnh nền full màn hình - Chữ đè lên)</option>
-                        <option value="style5">Style 5: Phá cách (Chia đôi màn hình chéo)</option>
+                        <option value="style4">Style 4: Poster (Ảnh nền full - Chữ trong khung)</option>
+                        <option value="style5">Style 5: Phá cách (Chia đôi màn hình)</option>
                     </select>
+                    <div class="mt-2 text-[10px] text-gray-500 space-y-1 italic border-t border-blue-200 pt-2">
+                        <p><b>• Style 1, 3:</b> Dùng ảnh tách nền (PNG) hoặc ảnh vuông (600x600px).</p>
+                        <p><b>• Style 2, 4, 5:</b> Dùng ảnh chữ nhật ngang chất lượng cao (1920x1080px hoặc 1200x600px).</p>
+                    </div>
                 </div>
 
                 <div>
@@ -490,7 +494,6 @@
                                 <i class="fa-solid fa-image"></i> Tải ảnh Banner
                             </button>
                             <input type="file" id="heroImgInput" class="hidden" accept="image/*" onchange="window.handleHeroImageUpload(this)">
-                            <input type="text" id="hImageUrl" class="w-full text-[10px] text-gray-400 bg-transparent border-none p-0" readonly>
                         </div>
                     </div>
                 </div>
@@ -500,14 +503,13 @@
                     <div class="col-span-2"><label class="block text-xs font-bold text-gray-700 mb-1">Tiêu đề dòng 2 (Màu chủ đạo)</label><input type="text" id="hTitle2" class="w-full px-3 py-2 border rounded-lg font-black text-orange-600"></div>
                     
                     <div class="col-span-2">
-                        <label class="block text-xs font-bold text-gray-700 mb-1">Danh sách thẻ Tags (Ngăn cách bằng dấu phẩy)</label>
-                        <input type="text" id="hTags" class="w-full px-3 py-2 border rounded-lg text-sm" placeholder="VD: 30 Đề Thi, Luyện Tốc Độ, Bám Sát SGK">
-                        <p class="text-[10px] text-gray-400 mt-1">Nhập bao nhiêu thẻ cũng được, hệ thống sẽ tự tạo nút.</p>
+                        <label class="block text-xs font-bold text-gray-700 mb-1">Thẻ Tags (Ngăn cách bằng dấu phẩy)</label>
+                        <input type="text" id="hTags" class="w-full px-3 py-2 border rounded-lg text-sm" placeholder="VD: 30 Đề Thi, Luyện Tốc Độ">
                     </div>
 
                     <div class="col-span-2"><label class="block text-xs font-bold text-gray-700 mb-1">Mô tả ngắn</label><textarea id="hDesc" class="w-full px-3 py-2 border rounded-lg h-20 text-sm"></textarea></div>
                     <div><label class="block text-xs font-bold text-gray-700 mb-1">Chữ trên nút</label><input type="text" id="hBtnText" class="w-full px-3 py-2 border rounded-lg font-bold"></div>
-                    <div><label class="block text-xs font-bold text-gray-700 mb-1">Link khi bấm nút</label><input type="text" id="hBtnLink" class="w-full px-3 py-2 border rounded-lg text-blue-600"></div>
+                    <div><label class="block text-xs font-bold text-gray-700 mb-1">Link nút bấm</label><input type="text" id="hBtnLink" class="w-full px-3 py-2 border rounded-lg text-blue-600"></div>
                 </div>
             </div>
 
