--- a/index.html
+++ b/index.html
@@ -58,13 +58,12 @@
 
     <header class="bg-white/95 backdrop-blur-md sticky top-0 z-40 border-b border-teal-100 shadow-sm">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 md:h-20 flex items-center justify-between">
-            <div class="flex items-center gap-3 cursor-pointer" onclick="location.reload()">
-                <div class="w-8 h-8 md:w-10 md:h-10 bg-accent rounded-xl flex items-center justify-center text-white text-lg md:text-xl shadow-lg">
+<div id="siteLogoContainer" class="flex items-center gap-3 cursor-pointer" onclick="location.reload()">
+                <div class="w-10 h-10 bg-gradient-to-br from-orange-500 to-yellow-400 rounded-xl flex items-center justify-center text-white text-xl shadow-lg shadow-orange-200">
                     <i class="fa-solid fa-graduation-cap"></i>
                 </div>
-                <span class="text-xl md:text-2xl text-brand font-handwriting pt-1">Thầy Choang</span>
+                <span class="text-2xl font-black text-brand tracking-tight">Thầy Choang</span>
             </div>
-
             <nav class="hidden md:flex items-center gap-8 font-bold text-gray-600 text-sm uppercase tracking-wide">
                 <a href="#" class="text-brand font-extrabold hover:text-orange-500 transition-colors">Trang chủ</a>
                 <a href="https://www.facebook.com/toanQmath" target="_blank" class="hover:text-brand transition-colors">Fanpage</a>
@@ -251,18 +250,14 @@
 
         // 1. RENDER BANNER (STYLE 1, 2, 3)
         // --- 1. RENDER BANNER (5 STYLES + LOGO + TAGS MỚI) ---
+        // --- RENDER BANNER (5 STYLES ĐÃ TINH CHỈNH) ---
         function renderHero(d) {
-            // A. Cập nhật Logo (nếu có)
+            // 1. Xử lý Logo (Nếu có)
             if (d.logo) {
-                // Tìm tất cả ảnh logo trên header để thay thế
-                const logoImgs = document.querySelectorAll('header img, .logo-img-class'); 
-                // Nếu trang dùng FontAwesome icon, ta cần thay bằng thẻ img
-                // Ở code hiện tại anh dùng icon <i class="fa-graduation-cap"></i>, ta sẽ tìm div chứa nó
-                const logoContainer = document.querySelector('header .bg-gradient-to-br');
+                const logoContainer = document.getElementById('siteLogoContainer');
                 if (logoContainer) {
-                    // Thay thế icon bằng ảnh logo
-                    logoContainer.className = "w-10 h-10 flex items-center justify-center";
-                    logoContainer.innerHTML = `<img src="${d.logo}" class="w-full h-full object-contain rounded-lg">`;
+                    // Thay thế toàn bộ nội dung logo mặc định bằng ảnh logo mới
+                    logoContainer.innerHTML = `<img src="${d.logo}" alt="Logo" class="h-10 md:h-12 w-auto object-contain">`;
                 }
             }
 
@@ -271,103 +266,112 @@
             
             const style = d.style || 'style1';
             
-            // Xử lý Tags: Chuyển mảng thành HTML
+            // Xử lý Tags (Hiển thị đẹp hơn)
             let tagsHtml = '';
             if (d.tags && Array.isArray(d.tags)) {
                 tagsHtml = d.tags.map(tag => 
-                    `<span class="bg-teal-100 text-teal-800 px-3 py-1 rounded-full text-xs font-bold border border-teal-200 uppercase tracking-wider shadow-sm">${tag}</span>`
+                    `<span class="bg-teal-50 text-teal-700 px-3 py-1 rounded-md text-[10px] md:text-xs font-bold border border-teal-200 uppercase tracking-wider shadow-sm">${tag}</span>`
                 ).join(' ');
-            } else if (d.tag1) { // Hỗ trợ dữ liệu cũ
-                tagsHtml = `<span class="bg-teal-100 text-teal-800 px-3 py-1 rounded-full text-xs font-bold border border-teal-200">${d.tag1}</span>`;
+            } else if (d.tag1) {
+                tagsHtml = `<span class="bg-teal-50 text-teal-700 px-3 py-1 rounded-md text-[10px] md:text-xs font-bold border border-teal-200">${d.tag1}</span>`;
             }
 
             let html = '';
 
-            // --- STYLE 1: CỔ ĐIỂN (Chữ nhỏ lại) ---
+            // --- STYLE 1: CỔ ĐIỂN (Đã chỉnh chữ nhỏ, Dòng 2 nhỏ hơn Dòng 1) ---
             if (style === 'style1') {
-                container.className = "flex-1 flex items-center relative overflow-hidden bg-gradient-to-br from-teal-50 via-white to-blue-50 py-12";
+                container.className = "flex-1 flex items-center relative overflow-hidden bg-gradient-to-br from-teal-50 via-white to-blue-50 py-10 md:py-16";
                 html = `
-                <div class="max-w-7xl mx-auto px-4 w-full grid grid-cols-1 lg:grid-cols-2 gap-10 items-center relative z-10">
-                    <div class="text-center lg:text-left order-2 lg:order-1 space-y-5">
-                        <h1 class="text-3xl md:text-5xl font-black text-gray-800 leading-tight">
-                            ${d.title1} <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-orange-500">${d.title2}</span>
+                <div class="max-w-7xl mx-auto px-4 w-full grid grid-cols-1 lg:grid-cols-2 gap-8 items-center relative z-10">
+                    <div class="text-center lg:text-left order-2 lg:order-1 space-y-4">
+                        <h1 class="font-black text-gray-800 leading-tight">
+                            <span class="text-2xl md:text-4xl block mb-1">${d.title1}</span>
+                            <span class="text-xl md:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-orange-500">${d.title2}</span>
                         </h1>
-                        <div class="flex flex-wrap gap-2 justify-center lg:justify-start pt-1">${tagsHtml}</div>
-                        <p class="text-base text-gray-600 font-medium max-w-xl mx-auto lg:mx-0 leading-relaxed">${d.desc}</p>
+                        <div class="flex flex-wrap gap-2 justify-center lg:justify-start">${tagsHtml}</div>
+                        <p class="text-sm md:text-base text-gray-600 font-medium max-w-xl mx-auto lg:mx-0 leading-relaxed">${d.desc}</p>
                         <div class="pt-2">
-                            <a href="${d.btnLink}" class="inline-block px-6 py-3 bg-accent text-white font-bold rounded-xl shadow-lg hover-bg-accent transition-transform hover:scale-105 uppercase tracking-wide text-sm">${d.btnText}</a>
+                            <a href="${d.btnLink}" class="inline-block px-6 py-3 bg-accent text-white font-bold rounded-xl shadow-lg hover:shadow-orange-300 transition-transform hover:scale-105 uppercase tracking-wide text-xs md:text-sm">${d.btnText}</a>
                         </div>
                     </div>
                     <div class="relative order-1 lg:order-2 flex justify-center">
-                        <img src="${d.image}" class="w-full max-w-sm object-contain drop-shadow-2xl animate-float" style="max-height: 400px;">
+                        <img src="${d.image}" class="w-full max-w-xs md:max-w-sm object-contain drop-shadow-2xl animate-float" style="max-height: 350px;">
                     </div>
                 </div>`;
             } 
-            // --- STYLE 2: HIỆN ĐẠI (Căn giữa) ---
+            // --- STYLE 2: HIỆN ĐẠI (Căn giữa - Chữ vừa phải) ---
             else if (style === 'style2') {
                 container.className = "flex-1 pt-12 bg-white relative overflow-hidden flex flex-col items-center";
                 html = `
                 <div class="max-w-4xl mx-auto px-4 text-center z-10 mb-8">
-                    <h1 class="text-4xl md:text-6xl font-black text-gray-900 mb-4 tracking-tight">${d.title1} <span class="text-accent">${d.title2}</span></h1>
-                    <div class="flex flex-wrap gap-2 justify-center mb-6 animate-fade-in">${tagsHtml}</div>
-                    <p class="text-lg text-gray-500 max-w-2xl mx-auto mb-8">${d.desc}</p>
-                    <a href="${d.btnLink}" class="px-8 py-3 bg-gray-900 text-white font-bold rounded-full hover:bg-gray-800 transition-all shadow-xl text-sm">${d.btnText} <i class="fa-solid fa-arrow-right ml-2"></i></a>
+                    <h1 class="font-black text-gray-900 mb-3 tracking-tight">
+                        <span class="block text-2xl md:text-4xl mb-1">${d.title1}</span>
+                        <span class="text-xl md:text-3xl text-accent">${d.title2}</span>
+                    </h1>
+                    <div class="flex flex-wrap gap-2 justify-center mb-4 opacity-90">${tagsHtml}</div>
+                    <p class="text-sm md:text-base text-gray-500 max-w-2xl mx-auto mb-6">${d.desc}</p>
+                    <a href="${d.btnLink}" class="px-8 py-3 bg-gray-900 text-white font-bold rounded-full hover:bg-gray-800 transition-all shadow-xl text-xs md:text-sm">${d.btnText} <i class="fa-solid fa-arrow-right ml-2"></i></a>
                 </div>
                 <div class="w-full max-w-5xl px-4 mt-auto">
-                    <img src="${d.image}" class="w-full h-auto rounded-t-3xl shadow-2xl border-t-4 border-x-4 border-gray-100">
+                    <img src="${d.image}" class="w-full h-auto rounded-t-2xl shadow-2xl border-t border-x border-gray-100">
                 </div>`;
             }
-            // --- STYLE 3: DARK MODE ---
+            // --- STYLE 3: DARK MODE (Chữ nhỏ, cân đối) ---
             else if (style === 'style3') {
                 container.className = "flex-1 bg-gray-900 text-white py-16 relative overflow-hidden flex items-center";
                 html = `
-                <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')] opacity-10"></div>
-                <div class="absolute top-0 right-0 w-1/2 h-full bg-gradient-to-l from-teal-900/40 to-transparent"></div>
-                <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-12 items-center relative z-10">
+                <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')] opacity-5"></div>
+                <div class="absolute top-0 right-0 w-1/2 h-full bg-gradient-to-l from-teal-900/30 to-transparent"></div>
+                <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-10 items-center relative z-10">
                     <div>
-                        <div class="w-16 h-1 bg-accent mb-6"></div>
-                        <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-none">${d.title1} <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-orange-400 to-yellow-300">${d.title2}</span></h1>
-                        <div class="flex flex-wrap gap-2 mb-6">${tagsHtml}</div>
-                        <p class="text-gray-400 text-base mb-8 border-l-2 border-gray-700 pl-4 py-1">${d.desc}</p>
-                        <a href="${d.btnLink}" class="px-8 py-3 border-2 border-accent text-accent font-bold hover:bg-accent hover:text-white transition-all uppercase tracking-widest text-xs rounded">${d.btnText}</a>
+                        <div class="w-12 h-1 bg-accent mb-4"></div>
+                        <h1 class="font-bold mb-4 leading-none">
+                            <span class="block text-2xl md:text-4xl mb-2">${d.title1}</span>
+                            <span class="text-xl md:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-orange-400 to-yellow-300">${d.title2}</span>
+                        </h1>
+                        <div class="flex flex-wrap gap-2 mb-4">${tagsHtml}</div>
+                        <p class="text-gray-400 text-sm mb-6 border-l-2 border-gray-700 pl-4">${d.desc}</p>
+                        <a href="${d.btnLink}" class="px-6 py-2.5 border border-accent text-accent font-bold hover:bg-accent hover:text-white transition-all uppercase tracking-widest text-xs rounded">${d.btnText}</a>
                     </div>
-                    <div class="relative">
-                        <div class="absolute -inset-4 bg-accent/20 rounded-full blur-3xl"></div>
-                        <img src="${d.image}" class="relative w-full max-w-xs mx-auto rounded shadow-2xl shadow-teal-500/10 border border-gray-700 grayscale hover:grayscale-0 transition-all duration-700">
+                    <div class="relative flex justify-center">
+                        <div class="absolute -inset-4 bg-accent/10 rounded-full blur-3xl"></div>
+                        <img src="${d.image}" class="relative w-full max-w-xs object-contain rounded shadow-2xl shadow-teal-500/10 grayscale hover:grayscale-0 transition-all duration-700">
                     </div>
                 </div>`;
             }
-            // --- STYLE 4: POSTER (Ảnh nền Full) ---
+            // --- STYLE 4: POSTER (Đã thêm khung nền mờ cho chữ dễ đọc) ---
             else if (style === 'style4') {
                 container.className = "flex-1 relative min-h-[500px] flex items-center";
                 html = `
                 <div class="absolute inset-0 z-0">
                     <img src="${d.image}" class="w-full h-full object-cover">
-                    <div class="absolute inset-0 bg-gradient-to-r from-black/80 via-black/50 to-transparent"></div>
-                </div>
+                    <div class="absolute inset-0 bg-black/40"></div> </div>
                 <div class="max-w-7xl mx-auto px-4 relative z-10 w-full text-white">
-                    <div class="max-w-2xl">
-                        <div class="flex flex-wrap gap-2 mb-4">${tagsHtml}</div>
-                        <h1 class="text-4xl md:text-6xl font-black mb-4 leading-tight">${d.title1} <br> <span class="text-accent">${d.title2}</span></h1>
-                        <p class="text-gray-300 text-lg mb-8 drop-shadow-md">${d.desc}</p>
-                        <a href="${d.btnLink}" class="px-8 py-4 bg-white text-gray-900 font-black rounded hover:bg-gray-100 transition-all shadow-lg uppercase tracking-wide text-sm">${d.btnText}</a>
+                    <div class="max-w-xl bg-black/40 backdrop-blur-md p-6 md:p-10 rounded-2xl border border-white/10 shadow-2xl">
+                        <div class="flex flex-wrap gap-2 mb-3">${tagsHtml}</div>
+                        <h1 class="font-black mb-3 leading-tight">
+                            <span class="block text-2xl md:text-4xl text-white">${d.title1}</span>
+                            <span class="text-xl md:text-3xl text-orange-400">${d.title2}</span>
+                        </h1>
+                        <p class="text-gray-200 text-sm md:text-base mb-6">${d.desc}</p>
+                        <a href="${d.btnLink}" class="px-6 py-3 bg-white text-gray-900 font-bold rounded hover:bg-gray-200 transition-all uppercase tracking-wide text-xs shadow-lg">${d.btnText}</a>
                     </div>
                 </div>`;
             }
-            // --- STYLE 5: PHÁ CÁCH (Chia chéo) ---
+            // --- STYLE 5: PHÁ CÁCH (Đã bỏ lớp phủ màu, ảnh rõ nét) ---
             else if (style === 'style5') {
                 container.className = "flex-1 bg-white relative overflow-hidden flex flex-col md:flex-row";
                 html = `
-                <div class="w-full md:w-1/2 p-10 md:p-20 flex flex-col justify-center bg-gray-50">
-                    <h1 class="text-3xl md:text-5xl font-black text-gray-800 mb-2">${d.title1}</h1>
-                    <h2 class="text-3xl md:text-5xl font-black text-transparent bg-clip-text bg-gradient-to-r from-brand to-teal-400 mb-6">${d.title2}</h2>
-                    <div class="flex flex-wrap gap-2 mb-6">${tagsHtml}</div>
-                    <p class="text-gray-600 mb-8 leading-relaxed">${d.desc}</p>
-                    <div><a href="${d.btnLink}" class="px-8 py-3 bg-brand text-white font-bold rounded-tl-xl rounded-br-xl shadow-lg hover:shadow-brand/50 transition-all text-sm">${d.btnText}</a></div>
+                <div class="w-full md:w-1/2 p-8 md:p-16 flex flex-col justify-center bg-gray-50 z-10">
+                    <h1 class="text-2xl md:text-4xl font-black text-gray-800 mb-1">${d.title1}</h1>
+                    <h2 class="text-xl md:text-3xl font-black text-brand mb-4">${d.title2}</h2>
+                    <div class="flex flex-wrap gap-2 mb-4">${tagsHtml}</div>
+                    <p class="text-gray-600 mb-6 text-sm leading-relaxed">${d.desc}</p>
+                    <div><a href="${d.btnLink}" class="px-6 py-3 bg-brand text-white font-bold rounded-tl-xl rounded-br-xl shadow-lg hover:shadow-brand/50 transition-all text-xs uppercase">${d.btnText}</a></div>
                 </div>
                 <div class="w-full md:w-1/2 relative min-h-[300px]">
-                    <div class="absolute inset-0 bg-accent transform -skew-x-6 scale-110 origin-bottom-left z-0"></div>
-                    <img src="${d.image}" class="absolute inset-0 w-full h-full object-cover z-10 mix-blend-multiply opacity-90">
+                    <img src="${d.image}" class="absolute inset-0 w-full h-full object-cover z-0">
+                    <div class="absolute inset-y-0 left-0 w-20 bg-gradient-to-r from-gray-50 to-transparent z-10"></div>
                 </div>`;
             }
 
