--- a/dashboard.html
+++ b/dashboard.html
@@ -463,7 +463,8 @@
                                 <i class="fa-solid fa-cloud-arrow-up"></i> Tải Logo mới
                             </button>
                             <input type="file" id="logoInput" class="hidden" accept="image/*" onchange="window.handleLogoUpload(this)">
-                            <input type="hidden" id="hLogoUrl"> <p class="text-[10px] text-red-500 italic mt-1">* Nên dùng ảnh vuông (100x100px) hoặc ngang (200x60px), nền trong suốt (PNG).</p>
+                            <input type="hidden" id="hLogoUrl">
+                            <p class="text-[10px] text-red-500 italic mt-1">* Ảnh vuông (100x100px), nền trong suốt (PNG).</p>
                         </div>
                     </div>
                 </div>
@@ -486,23 +487,25 @@
                             <img id="heroImgPreview" src="https://via.placeholder.com/150" class="w-full h-full object-contain">
                         </div>
                         <div class="flex-1">
-                            <button onclick="document.getElementById('heroImgInput').click()" class="px-4 py-2 bg-brand text-white rounded-lg text-sm font-bold hover:bg-teal-800 w-full mb-1">
+                            <button onclick="document.getElementById('heroImgInput').click()" class="px-4 py-2 bg-teal-600 text-white rounded-lg text-sm font-bold hover:bg-teal-700 w-full mb-1 shadow-md transition-all">
                                 <i class="fa-solid fa-image"></i> Tải ảnh Banner
                             </button>
                             <input type="file" id="heroImgInput" class="hidden" accept="image/*" onchange="window.handleHeroImageUpload(this)">
-                            <input type="hidden" id="hImageUrl"> </div>
+                            <input type="hidden" id="hImageUrl">
+                            
+                            <div class="mt-2 text-[10px] text-gray-500 space-y-1 bg-gray-50 p-2 rounded border border-gray-100">
+                                <p class="font-bold text-teal-600">Gợi ý kích thước:</p>
+                                <p>• <b>Style 1, 3:</b> Ảnh tách nền (PNG) hoặc vuông (600x600px).</p>
+                                <p>• <b>Style 2, 4, 5:</b> Ảnh chữ nhật ngang lớn (1200x600px).</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="col-span-2"><label class="block text-xs font-bold text-gray-700 mb-1">Tiêu đề dòng 1</label><input type="text" id="hTitle1" class="w-full px-3 py-2 border rounded-lg font-bold"></div>
                     <div class="col-span-2"><label class="block text-xs font-bold text-gray-700 mb-1">Tiêu đề dòng 2 (Màu chủ đạo)</label><input type="text" id="hTitle2" class="w-full px-3 py-2 border rounded-lg font-black text-orange-600"></div>
-                    
-                    <div class="col-span-2">
-                        <label class="block text-xs font-bold text-gray-700 mb-1">Thẻ Tags (Ngăn cách bằng dấu phẩy)</label>
-                        <input type="text" id="hTags" class="w-full px-3 py-2 border rounded-lg text-sm" placeholder="VD: 30 Đề Thi, Luyện Tốc Độ">
-                    </div>
-
+                    <div class="col-span-2"><label class="block text-xs font-bold text-gray-700 mb-1">Thẻ Tags (Ngăn cách bằng dấu phẩy)</label><input type="text" id="hTags" class="w-full px-3 py-2 border rounded-lg text-sm" placeholder="VD: 30 Đề Thi, Luyện Tốc Độ"></div>
                     <div class="col-span-2"><label class="block text-xs font-bold text-gray-700 mb-1">Mô tả ngắn</label><textarea id="hDesc" class="w-full px-3 py-2 border rounded-lg h-20 text-sm"></textarea></div>
                     <div><label class="block text-xs font-bold text-gray-700 mb-1">Chữ trên nút</label><input type="text" id="hBtnText" class="w-full px-3 py-2 border rounded-lg font-bold"></div>
                     <div><label class="block text-xs font-bold text-gray-700 mb-1">Link nút bấm</label><input type="text" id="hBtnLink" class="w-full px-3 py-2 border rounded-lg text-blue-600"></div>
