--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         /* Mobile Menu Animation */
         #mobile-menu { transition: max-height 0.3s ease-in-out; max-height: 0; overflow: hidden; }
         #mobile-menu.open { max-height: 400px; }
-    </style>
-    /* --- 1. HIỆU ỨNG RƠI TỰ ĐỘNG (HOA, CỜ, LÁ...) --- */
+        /* --- 1. HIỆU ỨNG RƠI TỰ ĐỘNG (HOA, CỜ, TUYẾT...) --- */
         .falling-item {
             position: fixed;
             top: -10%;
@@ -72,31 +71,33 @@
         /* --- 2. CÁC THEME MÀU SẮC (Ghi đè màu gốc) --- */
         
         /* Theme: CỜ ĐỎ SAO VÀNG (2/9, 30/4, Giỗ Tổ) */
-        body.theme-flag { background-color: #FEF2F2; } /* Nền đỏ rất nhạt */
-        body.theme-flag .text-brand { color: #B91C1C !important; } /* Đỏ đậm */
+        body.theme-flag { background-color: #FEF2F2; } 
+        body.theme-flag .text-brand { color: #B91C1C !important; } 
         body.theme-flag .bg-brand { background-color: #B91C1C !important; }
-        body.theme-flag .bg-accent { background-color: #F59E0B !important; } /* Vàng sao */
+        body.theme-flag .bg-accent { background-color: #F59E0B !important; } 
         body.theme-flag .text-accent { color: #F59E0B !important; }
 
         /* Theme: TẾT (Đỏ - Vàng tươi) */
-        body.theme-tet { background-color: #FFF7ED; } /* Cam nhạt */
-        body.theme-tet .text-brand { color: #DC2626 !important; } /* Đỏ tươi */
+        body.theme-tet { background-color: #FFF7ED; } 
+        body.theme-tet .text-brand { color: #DC2626 !important; } 
         body.theme-tet .bg-brand { background-color: #DC2626 !important; }
-        body.theme-tet .bg-accent { background-color: #FCD34D !important; } /* Vàng mai */
+        body.theme-tet .bg-accent { background-color: #FCD34D !important; } 
 
         /* Theme: 20/11 (Xanh phấn bảng - Hồng) */
         body.theme-teacher { background-color: #F0FDF4; } 
         body.theme-teacher .text-brand { color: #15803D !important; } 
-        body.theme-teacher .bg-accent { background-color: #DB2777 !important; } /* Hồng phấn */
+        body.theme-teacher .bg-accent { background-color: #DB2777 !important; }
 
         /* Theme: MÙA HÈ (Xanh biển) */
         body.theme-summer { background-color: #ECFEFF; } 
-        body.theme-summer .text-brand { color: #0284C7 !important; } /* Xanh biển */
+        body.theme-summer .text-brand { color: #0284C7 !important; } 
         body.theme-summer .bg-brand { background-color: #0284C7 !important; }
 
         /* Theme: MÙA ĐÔNG (Xám lạnh) */
         body.theme-winter { background-color: #F8FAFC; }
         body.theme-winter .text-brand { color: #475569 !important; }
+    </style>
+
 </head>
 <body class="bg-page flex flex-col min-h-screen">
 
