--- a/dashboard.html
+++ b/dashboard.html
@@ -1936,18 +1936,25 @@
                     <input list="bankList" id="confBankId" class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-200 outline-none font-bold text-blue-700 placeholder-gray-300" placeholder="VD: MB, VCB...">
                     <datalist id="bankList">
                         <option value="MB">MB Bank (Quân Đội)</option>
-                        <option value="VCB">Vietcombank</option>
-                        <option value="TCB">Techcombank</option>
-                        <option value="ICB">VietinBank</option>
-                        <option value="BIDV">BIDV</option>
-                        <option value="ACB">ACB</option>
-                        <option value="VPB">VPBank</option>
-                        <option value="TPB">TPBank</option>
-                        <option value="STB">Sacombank</option>
-                        <option value="VIB">VIB</option>
-                        <option value="HDB">HDBank</option>
+                        <option value="VCB">Vietcombank (Ngoại thương)</option>
+                        <option value="TIMO">Timo (Ngân hàng số)</option> <option value="TCB">Techcombank (Kỹ thương)</option>
+                        <option value="ACB">ACB (Á Châu)</option>
+                        <option value="VPB">VPBank (Việt Nam Thịnh Vượng)</option>
+                        <option value="TPB">TPBank (Tiên Phong)</option>
+                        <option value="ICB">VietinBank (Công thương)</option>
+                        <option value="BIDV">BIDV (Đầu tư & Phát triển)</option>
+                        <option value="STB">Sacombank (Sài Gòn Thương Tín)</option>
+                        <option value="VIB">VIB (Quốc tế)</option>
+                        <option value="HDB">HDBank (PT Nhà TP.HCM)</option>
+                        
                         <option value="MSB">MSB (Hàng Hải)</option>
                         <option value="OCB">OCB (Phương Đông)</option>
+                        <option value="SHB">SHB (Sài Gòn - Hà Nội)</option>
+                        <option value="LPB">LienVietPostBank</option>
+                        <option value="SEAB">SeABank</option>
+                        <option value="NAB">Nam A Bank</option>
+                        <option value="VCCB">VietCapital (Bản Việt)</option>
+                        <option value="EIB">Eximbank</option>
                     </datalist>
                 </div>
 
