--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, updateProfile } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+        import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, updateProfile, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
         import { getFirestore, doc, getDoc, setDoc, addDoc, collection, getDocs, query, where, orderBy } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
         // --- LOGIC TỰ ĐỘNG ĐỔI GIAO DIỆN THEO MÙA & SỰ KIỆN ---
         // --- LOGIC TỰ ĐỘNG ĐỔI GIAO DIỆN & TRANG TRÍ LOGO (NÂNG CẤP) ---
@@ -1029,6 +1029,33 @@
                 btn.innerHTML = originText; btn.disabled = false; 
             }
         };
+        // --- TỰ ĐỘNG CHUYỂN HƯỚNG HỌC SINH (AUTO REDIRECT) ---
+        // Đoạn này sẽ chạy ngay khi phát hiện người dùng đã đăng nhập
+        onAuthStateChanged(auth, async (user) => {
+            if (user) {
+                // 1. Cập nhật giao diện Index (Hiện avatar, ẩn nút đăng nhập...)
+                if(window.updateAuthUI) window.updateAuthUI(true); 
+
+                // 2. Kiểm tra quyền để chuyển trang
+                const adminEmails = ["phamngockhanh.942001@gmail.com", "admin@gmail.com"]; // Email Admin của anh
+                
+                if (adminEmails.includes(user.email)) {
+                    // Nếu là Admin -> Hiện nút vào Dashboard (nếu có)
+                    const adminBtn = document.getElementById('adminBtn');
+                    if(adminBtn) adminBtn.classList.remove('hidden');
+                } else {
+                    // Nếu là Học sinh -> Chuyển ngay sang trang Giao diện Học sinh
+                    // (Chỉ chuyển nếu đang không ở trang student.html để tránh lỗi vòng lặp)
+                    if (!window.location.href.includes("student.html")) {
+                        console.log("Học sinh đăng nhập -> Chuyển hướng...");
+                        window.location.href = "student.html";
+                    }
+                }
+            } else {
+                // Chưa đăng nhập
+                if(window.updateAuthUI) window.updateAuthUI(false);
+            }
+        });
     </script>
 </body>
 </html>
