--- a/student.html
+++ b/student.html
@@ -163,12 +163,12 @@
 
         // Cấu hình Firebase (Anh thay config của anh vào đây)
         const firebaseConfig = {
-             apiKey: "AIzaSy...",
-             authDomain: "lms-thitracnghiem.firebaseapp.com",
-             projectId: "lms-thitracnghiem",
-             storageBucket: "lms-thitracnghiem.appspot.com",
-             messagingSenderId: "...",
-             appId: "..."
+            apiKey: "AIzaSyCqAX3x1MbJ3do7m3EaH9JA4kFuVhlAc78",
+            authDomain: "lms-thitracnghiem.firebaseapp.com",
+            projectId: "lms-thitracnghiem",
+            storageBucket: "lms-thitracnghiem.firebasestorage.app",
+            messagingSenderId: "760187217240",
+            appId: "1:760187217240:web:d043cd5808c349f87a712d"
         };
 
         const app = initializeApp(firebaseConfig);
