--- a/index.html
+++ b/index.html
@@ -1039,15 +1039,15 @@
                 // 2. Kiểm tra quyền để chuyển trang
                 const adminEmails = ["phamngockhanh.942001@gmail.com", "admin@gmail.com"]; // Email Admin của anh
                 
+                // DANH SÁCH ADMIN & GIÁO VIÊN (Anh điền thêm email giáo viên vào đây)
                 if (adminEmails.includes(user.email)) {
-                    // Nếu là Admin -> Hiện nút vào Dashboard (nếu có)
-                    const adminBtn = document.getElementById('adminBtn');
-                    if(adminBtn) adminBtn.classList.remove('hidden');
+                    console.log("Admin/GV đăng nhập -> Chuyển sang Dashboard");
+                    // Chuyển thẳng sang trang quản trị
+                    window.location.href = "dashboard.html"; 
                 } else {
-                    // Nếu là Học sinh -> Chuyển ngay sang trang Giao diện Học sinh
-                    // (Chỉ chuyển nếu đang không ở trang student.html để tránh lỗi vòng lặp)
+                    // Nếu là Học sinh -> Chuyển sang trang Giao diện Học sinh
                     if (!window.location.href.includes("student.html")) {
-                        console.log("Học sinh đăng nhập -> Chuyển hướng...");
+                        console.log("Học sinh đăng nhập -> Chuyển hướng Student Page");
                         window.location.href = "student.html";
                     }
                 }
