--- a/dashboard.html
+++ b/dashboard.html
@@ -403,17 +403,45 @@
             </div>
             <div class="p-6 space-y-4">
                 <div>
-                    <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Ngân hàng (Gõ để tìm)</label>
-                    <input list="bankList" id="confBankId" class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-200 outline-none font-bold text-blue-700 placeholder-gray-300" placeholder="VD: MB, VCB...">
-                    <datalist id="bankList">
-                        <option value="MB">MB Bank (Quân Đội)</option><option value="VCB">Vietcombank</option><option value="TIMO">Timo (Ngân hàng số)</option><option value="TCB">Techcombank</option><option value="ACB">ACB</option><option value="VPB">VPBank</option><option value="TPB">TPBank</option><option value="ICB">VietinBank</option><option value="BIDV">BIDV</option><option value="STB">Sacombank</option><option value="VIB">VIB</option><option value="HDB">HDBank</option><option value="MSB">MSB</option><option value="OCB">OCB</option>
-                    </datalist>
+                    <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Chọn Ngân hàng (Chuẩn VietQR)</label>
+                    <select id="confBankId" class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-200 outline-none font-bold text-blue-700 bg-white cursor-pointer">
+                        <option value="970422">MB Bank (Quân Đội)</option>
+                        <option value="963388">Timo (Ngân hàng số)</option>
+                        <option value="970436">Vietcombank</option>
+                        <option value="970407">Techcombank</option>
+                        <option value="970415">VietinBank</option>
+                        <option value="970418">BIDV</option>
+                        <option value="970416">ACB</option>
+                        <option value="970432">VPBank</option>
+                        <option value="970423">TPBank</option>
+                        <option value="970403">Sacombank</option>
+                        <option value="970441">VIB</option>
+                        <option value="970437">HDBank</option>
+                        <option value="970426">MSB</option>
+                        <option value="970448">OCB</option>
+                        <option value="970443">SHB</option>
+                    </select>
+                    <p class="text-[10px] text-gray-400 mt-1 italic">* Chọn từ danh sách để tránh lỗi mã QR.</p>
                 </div>
-                <div><label class="block text-xs font-bold text-gray-500 uppercase mb-1">Số tài khoản</label><input type="text" id="confAccountNo" class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-200 outline-none font-bold text-xl tracking-wider" placeholder="VD: 03523..."></div>
-                <div><label class="block text-xs font-bold text-gray-500 uppercase mb-1">Tên chủ tài khoản (Viết hoa không dấu)</label><input type="text" id="confAccountName" class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-200 outline-none font-bold uppercase" placeholder="VD: PHAM DINH QUANG"></div>
+
+                <div>
+                    <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Số tài khoản</label>
+                    <input type="text" id="confAccountNo" class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-200 outline-none font-bold text-xl tracking-wider" placeholder="VD: 033...">
+                </div>
+
+                <div>
+                    <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Tên chủ tài khoản (Viết hoa không dấu)</label>
+                    <input type="text" id="confAccountName" class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-200 outline-none font-bold uppercase" placeholder="VD: PHAM DINH QUANG">
+                </div>
+
                 <div>
                     <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Giao diện mã QR</label>
-                    <select id="confTemplate" class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-200 outline-none bg-white"><option value="compact">Gọn gàng (Compact)</option><option value="compact2">Hiện đại (Compact 2 - Khuyên dùng)</option><option value="qr_only">Chỉ mã QR</option><option value="print">Bản in (Print)</option></select>
+                    <select id="confTemplate" class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-200 outline-none bg-white">
+                        <option value="compact2">Hiện đại (Khuyên dùng)</option>
+                        <option value="compact">Gọn gàng</option>
+                        <option value="qr_only">Chỉ mã QR</option>
+                        <option value="print">Bản in (Print)</option>
+                    </select>
                 </div>
             </div>
             <div class="p-5 border-t border-gray-100 bg-gray-50 rounded-b-2xl flex justify-end gap-3">
