--- a/dashboard.html
+++ b/dashboard.html
@@ -1614,23 +1614,31 @@
             }
         };
 
-        window.savePaymentConfig = async () => {
-            const data = {
-                BANK_ID: document.getElementById('confBankId').value.trim().toUpperCase(),
-                ACCOUNT_NO: document.getElementById('confAccountNo').value.trim(),
-                ACCOUNT_NAME: document.getElementById('confAccountName').value.trim().toUpperCase(),
-                TEMPLATE: document.getElementById('confTemplate').value,
-                updatedAt: new Date().toISOString()
-            };
+        // --- [DASHBOARD] CẬP NHẬT HÀM LƯU CẤU HÌNH THANH TOÁN ---
+window.savePaymentConfig = async () => {
+    const bankSelect = document.getElementById('confBankId');
+    
+    // Lấy cả ID (BIN) và Tên ngân hàng hiển thị
+    const bankId = bankSelect.value; 
+    const bankName = bankSelect.options[bankSelect.selectedIndex].text; 
 
-            if(!data.BANK_ID || !data.ACCOUNT_NO) return window.showNotification("Vui lòng nhập Ngân hàng và Số TK!", "error");
+    const data = {
+        BANK_ID: bankId.trim(), // Mã BIN (VD: 970422) dùng cho API VietQR
+        BANK_NAME: bankName,    // Tên (VD: MB Bank) dùng để hiển thị UI
+        ACCOUNT_NO: document.getElementById('confAccountNo').value.trim(),
+        ACCOUNT_NAME: document.getElementById('confAccountName').value.trim().toUpperCase(),
+        TEMPLATE: document.getElementById('confTemplate').value,
+        updatedAt: new Date().toISOString()
+    };
 
-            try {
-                await setDoc(doc(db, "site_settings", "payment_config"), data);
-                window.showNotification("Đã lưu thông tin thanh toán!", "success");
-                window.toggleModal('paymentConfigModal', false);
-            } catch(e) { window.showNotification("Lỗi lưu: " + e.message, "error"); }
-        };
+    if(!data.BANK_ID || !data.ACCOUNT_NO) return window.showNotification("Vui lòng nhập Ngân hàng và Số TK!", "error");
+
+    try {
+        await setDoc(doc(db, "site_settings", "payment_config"), data);
+        window.showNotification("Đã lưu thông tin thanh toán!", "success");
+        window.toggleModal('paymentConfigModal', false);
+    } catch(e) { window.showNotification("Lỗi lưu: " + e.message, "error"); }
+};
 
         document.getElementById('logoutBtn').onclick = async () => { if(await window.customConfirm("Bạn có chắc muốn đăng xuất?")) signOut(auth).then(()=>window.location.href="index.html"); }
     </script>
