--- a/student.html
+++ b/student.html
@@ -637,7 +637,7 @@ window.openPaymentModal = async (courseId) => {
         try {
             const s = await getDoc(doc(db, "site_settings", "payment_config"));
             // Fallback nếu chưa cấu hình
-            dynamicBankConfig = s.exists() ? s.data() : { BANK_ID: "970422", BANK_NAME: "MB Bank", ACCOUNT_NO: "0000", ACCOUNT_NAME: "ADMIN", TEMPLATE: "compact2" };
+            dynamicBankConfig = s.exists() ? s.data() : { BANK_ID: "970454", BANK_NAME: "Timo", ACCOUNT_NO: "0337820847", ACCOUNT_NAME: "PHAM DINH QUANG", TEMPLATE: "compact2" };
         } catch (e) { dynamicBankConfig = { BANK_ID: "970422", BANK_NAME: "Lỗi Tải", ACCOUNT_NO: "0000", ACCOUNT_NAME: "ERR", TEMPLATE: "compact2" }; }
     }
 
