--- a/dashboard.html
+++ b/dashboard.html
@@ -1616,39 +1616,33 @@
 
         // --- [DASHBOARD] CẬP NHẬT HÀM LƯU CẤU HÌNH THANH TOÁN ---
 // --- [DASHBOARD] CẬP NHẬT HÀM LƯU CẤU HÌNH THANH TOÁN (FIXED) ---
+// [FILE: dashboard.html] - Thay thế hàm savePaymentConfig cũ
+
 window.savePaymentConfig = async () => {
     const bankSelect = document.getElementById('confBankId');
     
-    // 1. Lấy Mã BIN (VD: 970423) -> Dùng để tạo link QR
+    // 1. Lấy giá trị thực (value) là mã BIN (VD: 970423) -> Dùng tạo QR
     const bankBin = bankSelect.value; 
     
-    // 2. Lấy Tên Ngân Hàng (VD: TPBank) -> Dùng để hiển thị cho đẹp
+    // 2. Lấy tên hiển thị (text) (VD: TPBank) -> Dùng hiển thị UI
     const bankName = bankSelect.options[bankSelect.selectedIndex].text; 
 
-    // 3. Lấy các thông tin khác
-    const accountNo = document.getElementById('confAccountNo').value.trim();
-    const accountName = document.getElementById('confAccountName').value.trim().toUpperCase();
-    const template = document.getElementById('confTemplate').value;
-
-    if(!bankBin || !accountNo) return window.showNotification("Vui lòng nhập Ngân hàng và Số TK!", "error");
-
     const data = {
-        BANK_ID: bankBin,       // Lưu mã BIN (Quan trọng cho API)
-        BANK_NAME: bankName,    // Lưu tên hiển thị (Quan trọng cho UI)
-        ACCOUNT_NO: accountNo,
-        ACCOUNT_NAME: accountName,
-        TEMPLATE: template,
+        BANK_ID: bankBin,       
+        BANK_NAME: bankName,    
+        ACCOUNT_NO: document.getElementById('confAccountNo').value.trim(),
+        ACCOUNT_NAME: document.getElementById('confAccountName').value.trim().toUpperCase(),
+        TEMPLATE: document.getElementById('confTemplate').value,
         updatedAt: new Date().toISOString()
     };
+
+    if(!data.BANK_ID || !data.ACCOUNT_NO) return window.showNotification("Vui lòng nhập Ngân hàng và Số TK!", "error");
 
     try {
         await setDoc(doc(db, "site_settings", "payment_config"), data);
         window.showNotification("Đã lưu thông tin thanh toán thành công!", "success");
         window.toggleModal('paymentConfigModal', false);
-    } catch(e) { 
-        console.error(e);
-        window.showNotification("Lỗi lưu: " + e.message, "error"); 
-    }
+    } catch(e) { window.showNotification("Lỗi lưu: " + e.message, "error"); }
 };
 
         document.getElementById('logoutBtn').onclick = async () => { if(await window.customConfirm("Bạn có chắc muốn đăng xuất?")) signOut(auth).then(()=>window.location.href="index.html"); }
